styled plus fixed layout bug

--- a/assets/public/style.css
+++ b/assets/public/style.css
@@ -1,3 +1,28 @@
+body {
+  transition: 0.2s ease all;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Header */
+
+.title {
+  color: gray;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(255, 106, 106);
+}
+
+a:hover {
+  color: rgb(255, 82, 82);
+}
+
+nav a {
+  font-size: 1.2em;
+  color: gray;
+}
+
 /* Flex stuff */
 
 .flex {
@@ -79,6 +104,10 @@ input:focus {
   float: right;
 }
 
+.author {
+  color: gray;
+}
+
 /* Dark mode */
 
 .dark,
@@ -86,6 +115,7 @@ input:focus {
   background-color: #222;
   color: #e6e6e6;
   border-color: #e6e6e6;
+  transition: 0.2s ease all;
 }
 
 /* Footer */
@@ -98,7 +128,7 @@ input:focus {
 
 @media all and (max-width: 760px) {
   .card {
-    width: 40%;
+    width: 40% !important;
   }
 
   #layout,
@@ -109,7 +139,7 @@ input:focus {
 
 @media all and (max-width: 500px) {
   .card {
-    width: 80%;
+    width: 80% !important;
   }
 
   #reset,
